--- a/GarageSale/Supporting Files/Info.plist
+++ b/GarageSale/Supporting Files/Info.plist
@@ -45,5 +45,9 @@
 	<string>To find garage sales near you</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>To find garage sales near you</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To upload images of items you want to sell</string>
+	<key>NSCameraUsageDescription</key>
+	<string>To upload images of items you want to sell</string>
 </dict>
 </plist>
