--- a/GarageSale/Supporting Files/Info.plist
+++ b/GarageSale/Supporting Files/Info.plist
@@ -51,5 +51,10 @@
 	<string>To upload images of items you want to sell</string>
 	<key>NSCalendarsUsageDescription</key>
 	<string>To add garage sales to your calendar</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>googlechromes</string>
+		<string>comgooglemaps</string>
+	</array>
 </dict>
 </plist>
